--- a/luna16/notebooks/data_exploration.ipynb
+++ b/luna16/notebooks/data_exploration.ipynb
@@ -127,14 +127,15 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
                 "import pandas as pd\n",
                 "import pydantic\n",
                 "\n",
-                "from luna16 import datasets, utils, visualizations\n",
+                "from luna16 import datasets, utils\n",
+                "from luna16.notebooks import visualizations\n",
                 "from luna16.settings import settings\n",
                 "\n",
                 "%matplotlib inline"
@@ -153,7 +154,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -184,7 +185,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -276,7 +277,7 @@
                             "4      0  "
                         ]
                     },
-                    "execution_count": 5,
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -287,7 +288,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -307,7 +308,7 @@
                             "Name: count, dtype: int64"
                         ]
                     },
-                    "execution_count": 6,
+                    "execution_count": 4,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -327,7 +328,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
