fix: use pre-made cutout arrays instead of array cache

--- a/luna16/notebooks/data_exploration.ipynb
+++ b/luna16/notebooks/data_exploration.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "4      0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,15 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LuNA 16 contains 1351 malignant nodules and 549714 benign modules.\n",
-      "Malignant nodules are 0.25%.\n"
+      "LuNA 16 contains 1351 nodules and 549714 not nodules.\n",
+      "Nodules are 0.25%.\n"
      ]
     },
     {
@@ -308,20 +308,18 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n_malignant_nodules = len(candidates[candidates[\"class\"] == 1])\n",
-    "n_benign_nodules = len(candidates[candidates[\"class\"] == 0])\n",
-    "percentage_of_malignant = (100 * n_malignant_nodules) / len(candidates)\n",
+    "n_is_nodules = len(candidates[candidates[\"class\"] == 1])\n",
+    "n_not_nodules = len(candidates[candidates[\"class\"] == 0])\n",
+    "percentage_of_malignant = (100 * n_is_nodules) / len(candidates)\n",
     "\n",
-    "print(\n",
-    "    f\"LuNA 16 contains {n_malignant_nodules} malignant nodules and {n_benign_nodules} benign modules.\"\n",
-    ")\n",
-    "print(f\"Malignant nodules are {percentage_of_malignant:.2f}%.\")\n",
+    "print(f\"LuNA 16 contains {n_is_nodules} nodules and {n_not_nodules} not nodules.\")\n",
+    "print(f\"Nodules are {percentage_of_malignant:.2f}%.\")\n",
     "\n",
     "candidates[\"class\"].value_counts()"
    ]
@@ -598,6 +596,513 @@
     "    f\"of rows with same seriesuid is {n_same_seriesuid_mean_for_annotations:.2f}.\"\n",
     ")\n",
     "series_uid_values_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Malignant Annotation file exploration\n",
+    "\n",
+    "The `annotations_with_malignancy.csv` file contains information ???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1182 entries, 0 to 1181\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   seriesuid          1182 non-null   object \n",
+      " 1   coord_x            1182 non-null   float64\n",
+      " 2   coord_y            1182 non-null   float64\n",
+      " 3   coord_z            1182 non-null   float64\n",
+      " 4   diameter_mm        1182 non-null   float64\n",
+      " 5   is_malignant       1182 non-null   bool   \n",
+      " 6   malignant_details  1182 non-null   object \n",
+      " 7   bboxLowX           1182 non-null   float64\n",
+      " 8   bboxLowY           1182 non-null   float64\n",
+      " 9   bboxLowZ           1182 non-null   float64\n",
+      " 10  bboxHighX          1182 non-null   float64\n",
+      " 11  bboxHighY          1182 non-null   float64\n",
+      " 12  bboxHighZ          1182 non-null   float64\n",
+      " 13  len_mal_details    1182 non-null   int64  \n",
+      "dtypes: bool(1), float64(10), int64(1), object(2)\n",
+      "memory usage: 121.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "annotations_malignancy_path = settings.DATA_DIR / \"annotations_with_malignancy.csv\"\n",
+    "annotations_malignancy = pd.read_csv(filepath_or_buffer=annotations_malignancy_path)\n",
+    "annotations_malignancy.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>seriesuid</th>\n",
+       "      <th>coord_x</th>\n",
+       "      <th>coord_y</th>\n",
+       "      <th>coord_z</th>\n",
+       "      <th>diameter_mm</th>\n",
+       "      <th>is_malignant</th>\n",
+       "      <th>malignant_details</th>\n",
+       "      <th>bboxLowX</th>\n",
+       "      <th>bboxLowY</th>\n",
+       "      <th>bboxLowZ</th>\n",
+       "      <th>bboxHighX</th>\n",
+       "      <th>bboxHighY</th>\n",
+       "      <th>bboxHighZ</th>\n",
+       "      <th>len_mal_details</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.3.6.1.4.1.14519.5.2.1.6279.6001.100225287222...</td>\n",
+       "      <td>-128.699421</td>\n",
+       "      <td>-175.319272</td>\n",
+       "      <td>-298.387506</td>\n",
+       "      <td>5.651471</td>\n",
+       "      <td>True</td>\n",
+       "      <td>[4, 2, 4, 2]</td>\n",
+       "      <td>-131.896480</td>\n",
+       "      <td>-178.259761</td>\n",
+       "      <td>-299.800004</td>\n",
+       "      <td>-125.451167</td>\n",
+       "      <td>-172.458980</td>\n",
+       "      <td>-296.200004</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.3.6.1.4.1.14519.5.2.1.6279.6001.265775376735...</td>\n",
+       "      <td>-69.175741</td>\n",
+       "      <td>218.052625</td>\n",
+       "      <td>-668.501273</td>\n",
+       "      <td>4.441200</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[3, 2, 3]</td>\n",
+       "      <td>-71.815939</td>\n",
+       "      <td>215.709820</td>\n",
+       "      <td>-670.900024</td>\n",
+       "      <td>-66.722189</td>\n",
+       "      <td>220.803570</td>\n",
+       "      <td>-666.900024</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.3.6.1.4.1.14519.5.2.1.6279.6001.276556509002...</td>\n",
+       "      <td>-67.459503</td>\n",
+       "      <td>-247.744211</td>\n",
+       "      <td>-211.095340</td>\n",
+       "      <td>7.744222</td>\n",
+       "      <td>True</td>\n",
+       "      <td>[5, 3, 4]</td>\n",
+       "      <td>-73.027344</td>\n",
+       "      <td>-253.847656</td>\n",
+       "      <td>-213.100004</td>\n",
+       "      <td>-61.074219</td>\n",
+       "      <td>-242.558594</td>\n",
+       "      <td>-209.500004</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.3.6.1.4.1.14519.5.2.1.6279.6001.276556509002...</td>\n",
+       "      <td>-97.690876</td>\n",
+       "      <td>-134.068054</td>\n",
+       "      <td>-187.094883</td>\n",
+       "      <td>6.690036</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[3, 3, 3]</td>\n",
+       "      <td>-102.910156</td>\n",
+       "      <td>-137.636719</td>\n",
+       "      <td>-189.700005</td>\n",
+       "      <td>-92.949219</td>\n",
+       "      <td>-130.332031</td>\n",
+       "      <td>-186.100005</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.3.6.1.4.1.14519.5.2.1.6279.6001.276710697414...</td>\n",
+       "      <td>69.529141</td>\n",
+       "      <td>87.036153</td>\n",
+       "      <td>-149.190113</td>\n",
+       "      <td>10.824515</td>\n",
+       "      <td>False</td>\n",
+       "      <td>[3, 3, 5, 2]</td>\n",
+       "      <td>63.731247</td>\n",
+       "      <td>80.468750</td>\n",
+       "      <td>-154.000000</td>\n",
+       "      <td>76.231247</td>\n",
+       "      <td>93.750000</td>\n",
+       "      <td>-144.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           seriesuid     coord_x     coord_y  \\\n",
+       "0  1.3.6.1.4.1.14519.5.2.1.6279.6001.100225287222... -128.699421 -175.319272   \n",
+       "1  1.3.6.1.4.1.14519.5.2.1.6279.6001.265775376735...  -69.175741  218.052625   \n",
+       "2  1.3.6.1.4.1.14519.5.2.1.6279.6001.276556509002...  -67.459503 -247.744211   \n",
+       "3  1.3.6.1.4.1.14519.5.2.1.6279.6001.276556509002...  -97.690876 -134.068054   \n",
+       "4  1.3.6.1.4.1.14519.5.2.1.6279.6001.276710697414...   69.529141   87.036153   \n",
+       "\n",
+       "      coord_z  diameter_mm  is_malignant malignant_details    bboxLowX  \\\n",
+       "0 -298.387506     5.651471          True      [4, 2, 4, 2] -131.896480   \n",
+       "1 -668.501273     4.441200         False         [3, 2, 3]  -71.815939   \n",
+       "2 -211.095340     7.744222          True         [5, 3, 4]  -73.027344   \n",
+       "3 -187.094883     6.690036         False         [3, 3, 3] -102.910156   \n",
+       "4 -149.190113    10.824515         False      [3, 3, 5, 2]   63.731247   \n",
+       "\n",
+       "     bboxLowY    bboxLowZ   bboxHighX   bboxHighY   bboxHighZ  len_mal_details  \n",
+       "0 -178.259761 -299.800004 -125.451167 -172.458980 -296.200004                4  \n",
+       "1  215.709820 -670.900024  -66.722189  220.803570 -666.900024                3  \n",
+       "2 -253.847656 -213.100004  -61.074219 -242.558594 -209.500004                3  \n",
+       "3 -137.636719 -189.700005  -92.949219 -130.332031 -186.100005                3  \n",
+       "4   80.468750 -154.000000   76.231247   93.750000 -144.000000                4  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotations_malignancy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Annotations with malignancy dataframe has 1182 rows and 600 unique series uid values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_annotations_malignancy = len(annotations_malignancy)\n",
+    "n_unique_annotations_malignancy_seriesuids = len(\n",
+    "    annotations_malignancy.seriesuid.unique()\n",
+    ")\n",
+    "print(\n",
+    "    f\"Annotations with malignancy dataframe has {n_annotations_malignancy} rows and {n_unique_annotations_malignancy_seriesuids} unique series uid values.\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 1182 number of annotations with malignancy, the average number of rows with same seriesuid is 1.97.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "seriesuid\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.176030616406569931557298712518    12\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.219428004988664846407984058588     9\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.195557219224169985110295082004     9\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.202187810895588720702176009630     9\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.328789598898469177563438457842     9\n",
+       "                                                                    ..\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.321465552859463184018938648244     1\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.320111824803959660037459294083     1\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.317087518531899043292346860596     1\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.316911475886263032009840828684     1\n",
+       "1.3.6.1.4.1.14519.5.2.1.6279.6001.174168737938619557573021395302     1\n",
+       "Name: count, Length: 600, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series_uid_values_count = annotations_malignancy[\"seriesuid\"].value_counts()\n",
+    "n_same_seriesuid_mean_for_annotations_malignancy = series_uid_values_count.mean()\n",
+    "print(\n",
+    "    f\"For {len(annotations_malignancy)} number of annotations with malignancy, the average number \"\n",
+    "    f\"of rows with same seriesuid is {n_same_seriesuid_mean_for_annotations_malignancy:.2f}.\"\n",
+    ")\n",
+    "series_uid_values_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "is_malignant\n",
+       "False    804\n",
+       "True     378\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotations_malignancy[\"is_malignant\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare Nodule Candidates and Annotations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "600"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotations_malignancy[\"seriesuid\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "590"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candidates[candidates[\"class\"] == 1][\"seriesuid\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare Series UIDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1.3.6.1.4.1.14519.5.2.1.6279.6001.122621219961396951727742490470',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.138080888843357047811238713686',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.176638348958425792989125209419',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.215785045378334625097907422785',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.232071262560365924176679652948',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.250481236093201801255751845296',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.419601611032172899567156073142',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.618434772073433276874225174904',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.663019255629770796363333877035',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.776800177074349870648765614630',\n",
+       " '1.3.6.1.4.1.14519.5.2.1.6279.6001.961063442349005937536597225349'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotations_malignancy_set = set(annotations_malignancy[\"seriesuid\"].unique())\n",
+    "candidates_set = set(candidates[candidates[\"class\"] == 1][\"seriesuid\"].unique())\n",
+    "\n",
+    "annotations_malignancy_set - candidates_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1.3.6.1.4.1.14519.5.2.1.6279.6001.323753921818102744511069914832'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "candidates_set - annotations_malignancy_set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare Series UID and center pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1182"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series_uid_center = annotations_malignancy[\n",
+    "    [\"seriesuid\", \"coord_x\", \"coord_y\", \"coord_z\"]\n",
+    "]\n",
+    "annotation_malignancy_tuples = series_uid_center.itertuples(index=False, name=None)\n",
+    "annotation_malignancy_set = set(annotation_malignancy_tuples)\n",
+    "len(annotation_malignancy_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1351"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series_uid_center = candidates[candidates[\"class\"] == 1][\n",
+    "    [\"seriesuid\", \"coordX\", \"coordY\", \"coordZ\"]\n",
+    "]\n",
+    "candidate_tuples = series_uid_center.itertuples(index=False, name=None)\n",
+    "candidate_set = set(candidate_tuples)\n",
+    "len(candidate_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1182"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(annotation_malignancy_set - candidate_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1351"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(candidate_set - annotation_malignancy_set)"
    ]
   },
   {
@@ -1760,7 +2265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
