feat: add ct cutouts generator

--- a/luna16/notebooks/data_exploration.ipynb
+++ b/luna16/notebooks/data_exploration.ipynb
@@ -134,9 +134,8 @@
     "import pandas as pd\n",
     "import pydantic\n",
     "\n",
-    "from luna16 import datasets\n",
+    "from luna16 import datasets, settings\n",
     "from luna16.notebooks import visualizations\n",
-    "from luna16.settings import settings\n",
     "\n",
     "%matplotlib inline"
    ]
