fix: use better sample of candidates dataframe

--- a/luna16/notebooks/malignancy_data_exploration.ipynb
+++ b/luna16/notebooks/malignancy_data_exploration.ipynb
@@ -31,7 +31,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -70,7 +70,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -223,7 +223,7 @@
                             "4   80.468750 -154.000000   76.231247   93.750000 -144.000000                4  "
                         ]
                     },
-                    "execution_count": 4,
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -234,7 +234,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [
                 {
@@ -257,7 +257,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
@@ -285,7 +285,7 @@
                             "Name: count, Length: 600, dtype: int64"
                         ]
                     },
-                    "execution_count": 6,
+                    "execution_count": 5,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -302,7 +302,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -314,7 +314,7 @@
                             "Name: count, dtype: int64"
                         ]
                     },
-                    "execution_count": 7,
+                    "execution_count": 6,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -332,7 +332,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 31,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -363,7 +363,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 41,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [
                 {
@@ -383,7 +383,7 @@
                             "Name: count, dtype: int64"
                         ]
                     },
-                    "execution_count": 41,
+                    "execution_count": 8,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -401,7 +401,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 42,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [
                 {
@@ -422,7 +422,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 43,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [
                 {
@@ -450,7 +450,7 @@
                             "Name: count, Length: 888, dtype: int64"
                         ]
                     },
-                    "execution_count": 43,
+                    "execution_count": 10,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -474,7 +474,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 44,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
@@ -483,7 +483,7 @@
                     "text": [
                         "<class 'pandas.core.frame.DataFrame'>\n",
                         "RangeIndex: 1182 entries, 0 to 1181\n",
-                        "Data columns (total 16 columns):\n",
+                        "Data columns (total 14 columns):\n",
                         " #   Column             Non-Null Count  Dtype  \n",
                         "---  ------             --------------  -----  \n",
                         " 0   seriesuid          1182 non-null   object \n",
@@ -500,10 +500,8 @@
                         " 11  bboxHighY          1182 non-null   float64\n",
                         " 12  bboxHighZ          1182 non-null   float64\n",
                         " 13  len_mal_details    1182 non-null   int64  \n",
-                        " 14  is_nodule          1182 non-null   bool   \n",
-                        " 15  is_annotated       1182 non-null   bool   \n",
-                        "dtypes: bool(3), float64(10), int64(1), object(2)\n",
-                        "memory usage: 123.6+ KB\n"
+                        "dtypes: bool(1), float64(10), int64(1), object(2)\n",
+                        "memory usage: 121.3+ KB\n"
                     ]
                 }
             ],
@@ -513,7 +511,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 45,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [
                 {
@@ -717,7 +715,7 @@
                             "[754975 rows x 8 columns]"
                         ]
                     },
-                    "execution_count": 45,
+                    "execution_count": 12,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -748,7 +746,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 46,
+            "execution_count": 13,
             "metadata": {},
             "outputs": [
                 {
@@ -952,7 +950,7 @@
                             "[1182 rows x 8 columns]"
                         ]
                     },
-                    "execution_count": 46,
+                    "execution_count": 13,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -977,7 +975,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 47,
+            "execution_count": 14,
             "metadata": {},
             "outputs": [
                 {
@@ -1009,7 +1007,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 48,
+            "execution_count": 15,
             "metadata": {},
             "outputs": [
                 {
@@ -1021,7 +1019,7 @@
                             "Name: count, dtype: int64"
                         ]
                     },
-                    "execution_count": 48,
+                    "execution_count": 15,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1032,7 +1030,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 49,
+            "execution_count": 16,
             "metadata": {},
             "outputs": [
                 {
@@ -1044,7 +1042,7 @@
                             "Name: count, dtype: int64"
                         ]
                     },
-                    "execution_count": 49,
+                    "execution_count": 16,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1055,7 +1053,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 50,
+            "execution_count": 17,
             "metadata": {},
             "outputs": [
                 {
@@ -1067,7 +1065,7 @@
                             "Name: count, dtype: int64"
                         ]
                     },
-                    "execution_count": 50,
+                    "execution_count": 17,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1078,7 +1076,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 51,
+            "execution_count": 18,
             "metadata": {},
             "outputs": [
                 {
@@ -1095,7 +1093,7 @@
                             "Name: diameter_mm, dtype: float64"
                         ]
                     },
-                    "execution_count": 51,
+                    "execution_count": 18,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1107,7 +1105,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 52,
+            "execution_count": 19,
             "metadata": {},
             "outputs": [
                 {
@@ -1135,7 +1133,7 @@
                             "Name: count, Length: 888, dtype: int64"
                         ]
                     },
-                    "execution_count": 52,
+                    "execution_count": 19,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1152,7 +1150,35 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 55,
+            "execution_count": 29,
+            "metadata": {},
+            "outputs": [
+                {
+                    "data": {
+                        "text/plain": [
+                            "'Number of rows (756157) is the same when we drop duplicates (756157) so our dataframe does not have any duplicates. Thus, we can use seriesuid and center coordinates to uniquely identify rows.'"
+                        ]
+                    },
+                    "execution_count": 29,
+                    "metadata": {},
+                    "output_type": "execute_result"
+                }
+            ],
+            "source": [
+                "dropped_candidates = complete_candidates[\n",
+                "    [\"seriesuid\", \"coord_x\", \"coord_y\", \"coord_z\"]\n",
+                "].drop_duplicates()\n",
+                "\n",
+                "(\n",
+                "    f\"Number of rows ({len(complete_candidates)}) is the same when we drop duplicates \"\n",
+                "    f\"({len(dropped_candidates)}) so our dataframe does not have any duplicates. Thus, \"\n",
+                "    \"we can use seriesuid and center coordinates to uniquely identify rows.\"\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 20,
             "metadata": {},
             "outputs": [],
             "source": [
