feat: continuing training by loading saved modules

--- a/luna16/notebooks/torchvision_tutorial.ipynb
+++ b/luna16/notebooks/torchvision_tutorial.ipynb
@@ -923,7 +923,8 @@
     "image = (255.0 * (image - image.min()) / (image.max() - image.min())).to(torch.uint8)\n",
     "image = image[:3, ...]\n",
     "pred_labels = [\n",
-    "    f\"pedestrian: {score:.3f}\" for label, score in zip(pred[\"labels\"], pred[\"scores\"], strict=False)\n",
+    "    f\"pedestrian: {score:.3f}\"\n",
+    "    for label, score in zip(pred[\"labels\"], pred[\"scores\"], strict=False)\n",
     "]\n",
     "pred_boxes = pred[\"boxes\"].long()\n",
     "output_image = draw_bounding_boxes(image, pred_boxes, pred_labels, colors=\"red\")\n",
