feat: add processed data notebook and update README with new notebook details

--- a/luna16/notebooks/data_exploration.ipynb
+++ b/luna16/notebooks/data_exploration.ipynb
@@ -6,23 +6,15 @@
    "source": [
     "# Data Exploration\n",
     "\n",
-    "Our goal is to be able to produce a training sample given our inputs of raw CT scan data and a list of annotations for those CTs. Figure below shows what we’ll need to do to turn our raw data into a training sample.\n",
+    "This system processes raw CT scans (`.mhd` metadata and `.raw` voxel data, indexed by [DICOM](https://www.dicomstandard.org) series UID) and LUNA-provided nodule annotations to generate training samples.\n",
     "\n",
-    "<figure>\n",
-    "    <center>\n",
-    "        <img src=\"attachments/data-transformation.png\"  style=\"width:750px;\" >\n",
-    "    </center>\n",
-    "</figure>\n",
-    "\n",
-    "Our CT data comes in two files: a `.mhd` file containing metadata header information, and a `.raw` file containing the raw bytes that make up the 3D array. Each file’s name starts with a unique identifier called the series UID (the name comes from the Digital Imaging and Communications in Medicine [DICOM](https://www.dicomstandard.org) nomenclature) for the CT scan in question.\n",
-    "\n",
-    "Our `Ct` class will consume those two files and produce the 3D array, as well as the transformation matrix to convert from the patient coordinate system to the index, row, column coordinates needed by the array (these coordinates are shown as (I,R,C) in the figures and are denoted with `_irc` variable suffixes in the code).\n",
+    "The Ct class constructs a 3D voxel array and a transformation matrix for patient-to-voxel coordinate conversion (denoted as (I,R,C) in code). Annotations include nodule coordinates with malignancy labels, linked to corresponding CT scans via UID. Coordinate transformations map annotated nodules to their precise (I,R,C) voxel indices within the 3D array.\n",
     "\n",
     "> **NOTE**: (I,R,C) stands for (Index, Row, Column)\n",
     "\n",
     "We will also load the annotation data provided by LUNA, which will give us a list of nodule coordinates, each with a malignancy flag, along with the series `UID` of the relevant CT scan. By combining the nodule coordinate with coordinate system transformation information, we get the index, row, and column of the voxel at the center of our nodule.\n",
     "\n",
-    "### The task\n",
+    "## The task\n",
     "\n",
     "Using the (I,R,C) coordinates, we can crop a small 3D slice of our CT data to use as the input to our model. Along with this 3D sample array, we must construct the rest of our training sample tuple, which will have the sample array, nodule status flag, series UID, and the index of this sample in the CT list of nodule candidates. This sample tuple is exactly what PyTorch expects from our Dataset subclass and represents the last section of our bridge from our original raw data to the standard structure of PyTorch tensors.\n"
    ]
