--- a/luna16/notebooks/luna16.ipynb
+++ b/luna16/notebooks/luna16.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "## Human Evaluation vs. Deep Learning \n",
     "\n",
-    "The majority of a CT scan is fundamentally uninteresting with regard to answering the question, “Does this patient have a malignant tumor?” This makes intuitive sense, since the vast majority of the patient’s body will consist of healthy cells. In the cases where there is a malignant tumor, up to 99.9999% of the voxels in the CT still won’t be cancer. That ratio is equivalent to a two-pixel blob of incorrectly tinted color somewhere on a high-definition television, or a single misspelled word out of a shelf of novels.\n",
+    "The majority of a CT scan does not contribute to determining whether a patient has a malignant tumor. This is because most of the patient's body consists of healthy cells. Even in cases where a malignant tumor is present, up to 99.9999% of the voxels in the CT scan will not indicate cancer. This ratio is comparable to a two-pixel error on a high-definition television screen or a single misspelled word in a shelf full of novels.\n",
     "\n",
     "<figure>\n",
     "    <center>\n",
@@ -47,15 +47,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## End-to-end vs. Specific model design\n",
+    "## End-to-End versus Specific Model Design \n",
     "\n",
-    "You might have seen elsewhere that _end-to-end approaches_ for detection and classification of objects are very successful in general vision tasks. TorchVision includes end-to-end models like Fast R-CNN/Mask R-CNN, but these are typically trained on hundreds of thousands of images, and those datasets aren’t constrained by the number of samples from rare classes. The project architecture we will use has the benefit of working well with a more modest amount of data. \n",
-    "\n",
-    "So while it’s certainly theoretically possible to just throw an arbitrarily large amount of data at a neural network until it learns the specifics of the proverbial lost needle, as well as how to ignore the hay, it’s going to be practically prohibitive to collect enough data and wait for a long enough time to train the network properly. That won’t be the best approach since the results are poor, and most readers won’t have access to the compute resources to pull it off at all.\n",
-    "\n",
-    "### Suitable end-to-end architecture\n",
-    "\n",
-    "If we would really want to use end-to-end design, we can always find architecture that would match our need (like Retina U-Net and FishNet). But if we would want to use them, we would first need to understand the their complex design. These complicated designs are capable of producing high-quality results, but they’re not the best because understanding the design decisions behind them requires having mastered fundamental concepts first."
+    "End-to-end models (e.g. Fast R-CNN, Mask R-CNN from TorchVision) perform well in general vision tasks but require vast datasets—impractical for rare classes. Our approach effectively handles modest data. Collecting immense data for training is resource-intensive and often yields poor results.\n"
    ]
   },
   {
@@ -66,8 +60,7 @@
     "\n",
     "## Computed Tomography (CT) Scan\n",
     "\n",
-    "We will be using data from CT scans extensively as the main data format for our project. CT scans are essentially 3D X-rays, represented as a 3D array of single-channel data. As we might recall from chapter 4, this is like a stacked set of grayscale PNG images. \n",
-    "\n",
+    "We will be using data from CT scans extensively as the main data format for our project. CT scans are essentially 3D X-rays, represented as a 3D array of single-channel data. Each element in the array is called a voxel, which is the 3D equivalent of a pixel.\n",
     "\n",
     "<figure>\n",
     "    <center>\n",
@@ -75,6 +68,8 @@
     "        <p><small>A CT scan of a human torso showing, from the top, skin, organs, spine, and patient support bed.</small></p>\n",
     "    </center>\n",
     "</figure>\n",
+    "\n",
+    "### Voxel\n",
     "\n",
     "> **Voxel - Volumetric pixel** is the 3D equivalent to the familiar two-dimensional pixel. It encloses a volume of space.\n",
     "\n",
@@ -102,52 +97,13 @@
    "source": [
     "# An end-to-end project design\n",
     "\n",
-    "We’re going to use five main steps to go from examining a whole-chest CT scan to giving the patient a lung cancer diagnosis. This figure only depicts the final path through the system once we’ve built and trained all of the requisite models. The actual work required to train the relevant models will be detailed as we get closer to implementing each step.\n",
+    "Our lung cancer diagnosis pipeline uses five key steps:\n",
     "\n",
-    "We will first work on step 1 (data loading), and then jump to step 4 before we come back and implement steps 2 and 3, since step 4 (classification) requires an approach similar to what we used in bird & plane model, using multiple convolutional and pooling layers to aggregate spatial information before feeding it into a linear classifier. Once we’ve got a handle on our classification model, we can start working on step 2 (segmentation). Since segmentation is the more complicated topic, we want to tackle it without having to learn both segmentation and the fundamentals of CT scans and malignant tumors at the same time. Instead, we’ll explore the cancer-detection space while working on a more familiar classification problem.\n",
-    "\n",
-    "<figure>\n",
-    "    <center>\n",
-    "        <img src=\"attachments/end-to-end-design.png\"  style=\"width:750px;\" >\n",
-    "    </center>\n",
-    "</figure>\n",
-    "\n",
-    "\n",
-    "### 1. Data Loading\n",
-    "\n",
-    "Load our raw CT scan data into a form that we can use with PyTorch. Putting raw data into a form usable by PyTorch will be the first step in any project you face. The process is somewhat less complicated with 2D image data and simpler still with non-image data.\n",
-    "\n",
-    "### 2. Segmentation\n",
-    "\n",
-    "Identify the voxels of potential tumors in the lungs using PyTorch to implement a technique known as _segmentation_. This is roughly akin to producing a heatmap of areas that should be fed into our classifier in step 3. This will allow us to focus on potential tumors inside the lungs and ignore huge swaths of uninteresting anatomy (a person can’t have lung cancer in the stomach, for example).\n",
-    "\n",
-    "### 3. Grouping\n",
-    "\n",
-    "Group interesting voxels into lumps: that is, candidate nodules (see figure 9.5 for more information on nodules). Here, we will find the rough center of each hotspot on our heatmap.\n",
-    "\n",
-    "Each nodule can be located by the index, row, and column of its center point. We do this to present a simple, constrained problem to the final classifier. Grouping voxels will not involve PyTorch directly, which is why we’ve pulled this out into a separate step. Often, when working with multistep solutions, there will be non-deep-learning glue steps between the larger, deep-learning-powered portions of the project.\n",
-    "\n",
-    "### 4. Classification\n",
-    "\n",
-    "Classify candidate nodules as actual nodules or non-nodules using 3D convolution.\n",
-    "\n",
-    "The features that determine the nature of a tumor from a candidate structure are local to the tumor in question, so this approach should provide a good balance between limiting input data size and excluding relevant information. Making scope-limiting decisions like this can keep each individual task constrained, which can help limit the amount of things to examine when troubleshooting.\n",
-    "\n",
-    "### 5. Module analysis and diagnosis\n",
-    "\n",
-    "Diagnose the patient using the combined per-nodule classifications.\n",
-    "\n",
-    "Similar to the nodule classifier in the previous step, we will attempt to determine whether the nodule is benign or malignant based on imaging data alone. We will take a simple maximum of the per-tumor malignancy predictions, as only one tumor needs to be malignant for a patient to have cancer. Other projects might want to use different ways of aggregating the per-instance predictions into a file score. Here, we are asking, “Is there anything suspicious?” so maximum is a good fit for aggregation. If we were looking for quantitative information like “the ratio of type A tissue to type B tissue,” we might take an appropriate mean instead.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Autograd\n",
-    "\n",
-    "Our approach for solving the problem won’t use **end-to-end gradient backpropagation** to directly optimize for our end goal. Instead, we’ll **optimize discrete chunks of the problem individually**, since our segmentation model and classification model won’t be trained in tandem with each other. That might limit the top-end effectiveness of our solution, but we feel that this will make for a much better learning experience.\n",
-    "\n"
+    "1. Data Loading: Convert raw CT scans into PyTorch-compatible format.\n",
+    "2. Segmentation:Detect tumor-associated voxels in lung regions using segmentation models.\n",
+    "3. Grouping: Cluster voxels into candidate nodules and identify their 3D centers (non-ML step).\n",
+    "4. Classification: Analyze 3D regions around candidate nodules using convolutional networks to predict malignancy.\n",
+    "5. Diagnosis: Aggregate nodule predictions, using maximum malignancy score for final diagnosis.\n"
    ]
   }
  ],
