refactor: rename model classes and update ratio references for consistency

--- a/luna16/notebooks/data_exploration.ipynb
+++ b/luna16/notebooks/data_exploration.ipynb
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2148,7 +2148,7 @@
     }
    ],
    "source": [
-    "ratio = dto.LunaClassificationRatio(positive=1, negative=1)\n",
+    "ratio = dto.NoduleRatio(positive=1, negative=1)\n",
     "datasets.CutoutsDataset(ratio)"
    ]
   },
