docs: extend data exploration and processing notebooks

--- a/luna16/notebooks/luna16.ipynb
+++ b/luna16/notebooks/luna16.ipynb
@@ -32,6 +32,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Describing Data structures\n",
+    "\n",
+    "The 10 subsets we discussed earlier have about 90 CT scans each (888 in total), with every CT scan represented as two files: one with a `.mhd` extension and one with a `.raw` extension. The data being split between multiple files is hidden behind the `sitk` routines, however, and is not something we need to be directly concerned with.\n",
+    "\n",
+    "### Series UID\n",
+    "\n",
+    "We identify specific CT scans using the **series instance UID** (**series_uid**) assigned when the CT scan was created. DICOM makes heavy use of unique identifiers (UIDs) for individual DICOM files, groups of files, courses of treatment, and so on.\n",
+    "\n",
+    "`seriesuid` is property that is in both `candidates.csv` and `annotations.csv`. It uniquely identifies CT scan. But metadata assigned to this scans does not need to be unique. Both candidates and annotations dataframes are not unique on `seriesuid`. Candidates file contains center point of potential nodule and info if it is nodule or just lump. Annotation file contains center point of indemnified nodule and diameter of this nodule. CT scan can have multiple nodules and thus both of this dataframes can he multiple rows with the same `seriesuid`.\n",
+    "\n",
+    "> **Series UID** identifiers are similar in concept to [UUIDs](https://docs.python.org/3/library/uuid.html), but they have a different creation process and are formatted differently. For our purposes, we can treat them as opaque ASCII strings that serve as unique keys to reference the various CT scans. Officially, only the characters $0$ through $9$ and the period (.) are valid characters in a DICOM UID, but some DICOM files in the wild have been anonymized with routines that replace the UIDs with hexadecimal (0–9 and a–f) or other technically out-of-spec values.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Human Evaluation vs. Deep Learning \n",
     "\n",
     "The majority of a CT scan does not contribute to determining whether a patient has a malignant tumor. This is because most of the patient's body consists of healthy cells. Even in cases where a malignant tumor is present, up to 99.9999% of the voxels in the CT scan will not indicate cancer. This ratio is comparable to a two-pixel error on a high-definition television screen or a single misspelled word in a shelf full of novels.\n",
@@ -115,7 +132,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.11.6"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
